www/src/js/views/modules/ModuleFinderContainer.scss
@import "~styles/utils/modules-entry.scss";

.moduleFilters {
  .filterHeader {
    display: flex;
    margin-bottom: 1rem;
    line-height: 1;

    h3 {
      margin: 0;
      font-size: $font-size-lg;
      color: var(--gray-light);
    }

    :global(.btn) {
      padding-top: 0;
      padding-bottom: 0;
      margin-left: 0.5rem;
    }
  }

  @include media-breakpoint-up(md) {
    max-width: 16rem;
  }

  @include media-breakpoint-down(sm) {
    // Avoid overlapping with the FAB
    padding-bottom: 4rem;

    .filterHeader {
      padding: $navtab-height ($grid-gutter-width / 2) 0.6rem;

      h3 {
        margin-bottom: 0;
        color: var(--gray);
      }
    }
  }
}

